--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 /* common styles or utilities */
+header{
+    background-color: #562EFF;
+    width: 100%;
+    height: 94px;
+}
+.navigation{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #FFFFFF;
+}
+.logo{
+    display: flex;
+    gap: 10px;
+}
+.logo img{
+    width: 45px;
+    height: 51px;
+}
+.page-detail{
+    display: flex;
+    gap: 20px;
+    font-size: 16px;
+}
+.page-detail img{
+    width: 56px;
+    height: 56px;
+}
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
